syntax = "proto3";

package models;

import "api.proto";
import "error.proto";

// Require Go Package
option go_package = "/models";

service NodeService {
  rpc Initialize(InitializeRequest) returns (GenericResponse) {}
  rpc Connect(ConnectionRequest) returns (GenericResponse) {}
  rpc Action(ActionRequest) returns (ActionResponse) {}
  rpc Sign(AuthRequest) returns (AuthResponse) {}
  rpc Verify(VerifyRequest) returns (VerifyResponse) {}
  rpc Update(UpdateRequest) returns (GenericResponse) {}
  rpc Invite(InviteRequest) returns (GenericResponse) {}
  rpc Respond(InviteResponse) returns (GenericResponse) {}
  rpc Mail(MailboxRequest) returns (MailboxResponse) {}
  rpc OnComplete(GenericRequest) returns (stream CompleteEvent) {}
  rpc OnInvite(GenericRequest) returns (stream InviteRequest) {}
  rpc OnReply(GenericRequest) returns (stream InviteResponse) {}
  rpc OnMail(GenericRequest) returns (stream MailEvent) {}
  rpc OnProgress(GenericRequest) returns (stream ProgressEvent) {}
  rpc OnStatus(GenericRequest) returns (stream StatusEvent) {}
  rpc OnTopic(GenericRequest) returns (stream TopicEvent) {}
  rpc OnError(GenericRequest) returns (stream ErrorMessage) {}
}
